--- a/src/index.html
+++ b/src/index.html
@@ -33,17 +33,70 @@
     </section>
 
     <!-- Banner Section -->
-    <section class="w-full flex justify-center items-center px-20 py-10 gap-22">
+    <section class="w-full h-screen flex justify-center items-center px-20 py-10 gap-22 bg-amber-100">
         <!-- Text -->
         <div>
-            <p class="text-6xl">Your Perfect Morning Begins Here</p>
+            <p class="text-6xl text-amber-950">Your Perfect Morning Begins Here</p>
             <p class="py-6">Freshly brewed coffee made with love, served to brighten your day. <br> Whether it’s morning energy or evening relaxation, <br> we’ve got the perfect cup for you.</p>
             <button id="btn" class="px-4 py-1 rounded-md">Log In</button>
         </div>
         <!-- Image -->
-        <div class="w-220 h-100">
+        <div class="w-200 h-100">
             <img src="./img/1.png" alt="">
         </div>
     </section>
+
+
+    <!-- 2nd Page -->
+    <section class="w-full h-screen flex justify-center items-center px-20 py-2 gap-50 bg-amber-950" >
+        <!-- Image -->
+        <div class="w-100 h-100">
+            <img src="./img/pexels-chevanon-302899.jpg" alt="">
+        </div>
+         <!-- Text -->
+        <div>
+            <p class="text-6xl text-amber-400">Hot Beverages</p>
+            <p class="py-6 text-1xl text-white">Discover the perfect hot sip, whether you crave energy, calm, or comfort.</p>
+            <button id="btn" class="px-4 py-1 rounded-md">View All</button>
+        </div>
+        
+    </section>
+
+    <!-- 3rd Page -->
+
+     <section class="w-full h-screen flex justify-center items-center px-20 py-2 gap-50 bg-amber-950" >
+         <!-- Text -->
+        <div>
+            <p class="text-6xl text-amber-400">Cold Beverages</p>
+            <p class="py-6 text-1xl text-white">Cool down with refreshing iced coffees, teas, and chilled delights made to energize your day.</p>
+            <button id="btn" class="px-4 py-1 rounded-md">View All</button>
+        </div>
+
+         <!-- Image -->
+        <div class="w-100 h-100">
+            <img src="./img/Mocha_coffee.jpg" alt="">
+        </div>
+        
+    </section>
+
+    <!-- About Us Section -->
+
+    <section class="w-full h-screen flex justify-center items-center px-20 py-2 gap-50" >
+        <div>
+            <img src="./img/nathan-dumlao-6VhPY27jdps-unsplash.jpg" alt="">
+        </div>
+
+        <div>
+            <h2 class="text-3xl border-b-4 border-y-orange-400 inline-block">About Us</h2>
+            <p class="py-6">
+                Welcome to Coffee Heaven, a place built out of passion for great coffee and genuine hospitality. We believe that every sip should inspire happiness, which is why we focus on quality at every step—from sourcing rich, sustainable beans to creating recipes that balance tradition with innovation. Our café is more than just a stop for your daily brew; it’s a space designed for comfort, creativity, and community. Whether you crave the warmth of a hot latte, the refreshment of an iced blend, or the coziness of a quiet corner, we’ve created Coffee Heaven to be your go-to destination. Here, every cup is crafted with love, and every guest is part of our family.
+            </p>
+        </div>
+
+    </section>
+
+
+
+
 </body>
 </html>
