--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,28 @@
     </section>
 
 
+    <section class=" bg-orange-200">
+        <!-- Title -->
+        <div class="text-center py-10">
+            <p class="text-6xl text-amber-700"> Best Selling Items</p>
+            <p class="py-3">Your taste, your choice—explore the items our customers love the most.</p>
+        </div>
+
+        <!-- Cards -->
+         <div>
+
+            <!-- First Box -->
+             <div>
+                <img src="./img/pexels-chevanon-312418.jpg" class="w-60 h-60 border-4 border-amber-50" alt="">
+                <p>Cappuccino</p>
+                <p></p>
+             </div>
+         </div>
+
+
+    </section>
+
+
 
 
 </body>
