--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
     </section>
 
 
-    <section class=" bg-orange-200">
+    <section class="bg-amber-300">
         <!-- Title -->
         <div class="text-center py-10">
             <p class="text-6xl text-amber-700"> Best Selling Items</p>
@@ -104,15 +104,47 @@
         </div>
 
         <!-- Cards -->
-         <div>
+         <div class="flex justify-center items-center gap-2 py-10 px-3">
 
             <!-- First Box -->
-             <div>
-                <img src="./img/pexels-chevanon-312418.jpg" class="w-60 h-60 border-4 border-amber-50" alt="">
-                <p>Cappuccino</p>
-                <p></p>
+             <div class="border-2 border-amber-600 rounded-md px-4 py-2 bg-amber-500">
+                <img src="./img/pexels-chevanon-312418.jpg" class="w-60 h-60 border-4 border-amber-50 mx-auto" alt="">
+                <p class="text-2xl text-center py-3 font-bold text-amber-950">Cappuccino</p>
+                <p>Price: Small $2.50 | Medium $3.00 | Large $3.50</p>
+                <p>Calories: 120 kcal</p>
+                <p>Flavours: Classic, Vanilla, Caramel</p>
+                <p>Serving: Hot / Iced</p>
+                <p>Note: Vegan milk available 🥛</p>
+                <p>Description: Smooth espresso topped with steamed milk foam.</p>
+                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto">Order Now</button>
              </div>
-         </div>
+
+             <!-- 2nd Box -->
+             <div class="border-2 border-amber-600 rounded-md px-4 py-2  bg-amber-500">
+                <img src="./img/Americano.jpg" class="w-60 h-60 border-4 border-amber-50 mx-auto" alt="">
+                <p class="text-2xl text-center py-3 font-bold text-amber-950">Cappuccino</p>
+                <p>Price: Small $2.20 | Medium $2.70 | Large $3.20</p>
+                <p>Calories: 90 kcal</p>
+                <p>Flavours: Classic, Vanilla</p>
+                <p>Serving: Hot / Iced</p>
+                <p>Note: Vegan milk available 🥛</p>
+                <p>Description: Bold espresso diluted with hot water for a smooth taste.</p>
+                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto">Order Now</button>
+             </div>
+
+             <!-- 3rd Box -->
+             <div class="border-2 border-amber-600 rounded-md px-4 py-2  bg-amber-500">
+                <img src="./img/Mocha_coffee.jpg" class="w-60 h-60 border-4 border-amber-50 mx-auto" alt="">
+                <p class="text-2xl text-center py-3 font-bold text-amber-950">Mocha</p>
+                <p>Price: Small $3.00 | Medium $3.50 | Large $4.00</p>
+                <p>Calories: 180 kcal</p>
+                <p>Flavours: Chocolate, Caramel, Hazelnut</p>
+                <p>Serving: Hot / Iced</p>
+                <p>Note: Chocolate lovers’ favorite 🍫</p>
+                <p>Description: Espresso blended with chocolate and steamed milk.</p>
+                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto">Order Now</button>
+             </div>
+        </div>
 
 
     </section>
