--- a/src/index.html
+++ b/src/index.html
@@ -96,15 +96,15 @@
     </section>
 
 
-    <section class="bg-amber-300">
+    <section class="bg-amber-950">
         <!-- Title -->
         <div class="text-center py-10">
-            <p class="text-6xl text-amber-700"> Best Selling Items</p>
-            <p class="py-3">Your taste, your choice—explore the items our customers love the most.</p>
+            <p class="text-6xl font-bold text-white border-b-4 border-y-orange-400 inline-block py-3"> Best Selling Items</p>
+            <p class="py-3 font-medium text-gray-50">Your taste, your choice—explore the items our customers love the most.</p>
         </div>
 
         <!-- Cards -->
-         <div class="flex justify-center items-center gap-2 py-10 px-3">
+         <div class="flex justify-center items-center gap-2 py-10 px-5">
 
             <!-- First Box -->
              <div class="border-2 border-amber-600 rounded-md px-4 py-2 bg-amber-500">
@@ -116,7 +116,7 @@
                 <p>Serving: Hot / Iced</p>
                 <p>Note: Vegan milk available 🥛</p>
                 <p>Description: Smooth espresso topped with steamed milk foam.</p>
-                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto">Order Now</button>
+                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto cursor-pointer hover:scale-110 transition">Order Now</button>
              </div>
 
              <!-- 2nd Box -->
@@ -129,7 +129,7 @@
                 <p>Serving: Hot / Iced</p>
                 <p>Note: Vegan milk available 🥛</p>
                 <p>Description: Bold espresso diluted with hot water for a smooth taste.</p>
-                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto">Order Now</button>
+                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto cursor-pointer hover:scale-110 transition">Order Now</button>
              </div>
 
              <!-- 3rd Box -->
@@ -142,7 +142,7 @@
                 <p>Serving: Hot / Iced</p>
                 <p>Note: Chocolate lovers’ favorite 🍫</p>
                 <p>Description: Espresso blended with chocolate and steamed milk.</p>
-                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto">Order Now</button>
+                <button class="bg-amber-950 px-4 py-1 rounded-3xl text-gray-50 block mx-auto cursor-pointer hover:scale-110 transition">Order Now</button>
              </div>
         </div>
 
