Menu PAge complete

--- a/src/index.html
+++ b/src/index.html
@@ -105,14 +105,44 @@
             <ul id="menu-list" class="grid grid-cols-3 gap-10 text-center max-w-6xl mx-auto">
                 <li class="flex flex-col items-center">
                     <img src="./img/Cappuccino.png" alt="" class="h-48 w-full object-contain">
-                    <h3 class="font-semibold text-2xl">Cappuccino</h3>
-                    <p>Bold espresso, creamy perfection.</p>
+                    <h3 class="font-semibold text-2xl py-2">Cappuccino</h3>
+                    <p>A perfect harmony of bold espresso, velvety steamed milk, and silky foam, crafted to give you a rich, creamy indulgence in every sip.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Americano.png" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Americano</h3>
+                    <p>smooth, bold, and refreshing, made by blending rich espresso with hot water for a pure coffee experience full of depth and flavor.</p>
                 </li>
 
                  <li class="flex flex-col items-center">
                     <img src="./img/Cortado.png" alt="" class="h-48 w-full object-contain">
-                    <h3 class="font-semibold text-2xl">Cappuccino</h3>
-                    <p>Bold espresso, creamy perfection.</p>
+                    <h3 class="font-semibold text-2xl py-2">Cortado</h3>
+                    <p>A bold espresso gently softened with a touch of warm milk, creating the perfect balance of strength and smoothness in every sip.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Ice_Coffee.png" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Ice Coffee</h3>
+                    <p>A chilled delight of freshly brewed coffee poured over ice, crisp and refreshing with every energizing sip.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Latte.png" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Latte</h3>
+                    <p>A creamy blend of rich espresso and silky steamed milk, topped with a light layer of foam for a smooth and comforting coffee experience.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Mocha_coffee.jpg" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Mocha Coffee</h3>
+                    <p>A luscious fusion of bold espresso, velvety chocolate, and creamy milk, topped with a swirl of foam or whipped cream for a truly indulgent treat.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Mocha_coffee.jpg" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Mocha Coffee</h3>
+                    <p>A luscious fusion of bold espresso, velvety chocolate, and creamy milk, topped with a swirl of foam or whipped cream for a truly indulgent treat.</p>
                 </li>
                 
                 
