--- a/src/index.html
+++ b/src/index.html
@@ -140,9 +140,21 @@
                 </li>
 
                 <li class="flex flex-col items-center">
-                    <img src="./img/Mocha_coffee.jpg" alt="" class="h-48 w-full object-contain">
-                    <h3 class="font-semibold text-2xl py-2">Mocha Coffee</h3>
-                    <p>A luscious fusion of bold espresso, velvety chocolate, and creamy milk, topped with a swirl of foam or whipped cream for a truly indulgent treat.</p>
+                    <img src="./img/Espresso.png" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Espresso</h3>
+                    <p>The pure essence of coffee, rich and intense, served as a bold shot that awakens your senses with deep aroma and powerful flavor.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Black_Coffee.png" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Black Coffee</h3>
+                    <p>Pure, strong, and refreshing, brewed to deliver the true essence of coffee with bold flavor and an energizing kick.</p>
+                </li>
+
+                <li class="flex flex-col items-center">
+                    <img src="./img/Cold brew.png" alt="" class="h-48 w-full object-contain">
+                    <h3 class="font-semibold text-2xl py-2">Cold Brew</h3>
+                    <p>Smooth, bold, and naturally sweet, slowly steeped in cold water for a refreshing coffee with a rich flavor and silky finish</p>
                 </li>
                 
                 
@@ -151,6 +163,52 @@
 
         </div>
 
+     </section>
+
+     <!-- Customer Review Section -->
+
+
+     <section>
+        <div>
+            <ul>
+                <li>
+                    <img class="h-40 w-40"  src="./img/Customer 1.jpg" alt="">
+                    <h3>John Doe</h3>
+                    <i>"The best coffee shop in town! The ambiance is cozy, and the staff are incredibly friendly. Their cappuccino is a must-try!"</i>
+                </li>
+
+                 <li>
+                    <img src="./img/Customer 4.jpg" alt="">
+                    <h3>Emily Johnson</h3>
+                    <i>"Coffee Heaven has become my go-to spot for both work and relaxation. The Wi-Fi is reliable, and the atmosphere is just right."</i>
+                </li>
+
+                <li>
+                    <img src="./img/Customer 2.jpg" alt="">
+                    <h3>Jane Smith</h3>
+                    <i>"I love their iced coffee! It's the perfect pick-me-up on a hot day. The quality of the beans really shines through in every cup."</i>
+                </li>
+
+                <li>
+                    <img src="./img/Customer 5.jpg" alt="">
+                    <h3>Sophia Wilson</h3>
+                    <i>"The baristas at Coffee Heaven are true artists. They take the time to craft each drink to perfection. Highly recommend the latte art!"</i>
+                </li>
+
+                <li>
+                    <img src="./img/Customer 3.jpg" alt="">
+                    <h3>Michael Brown</h3>
+                    <i>"Coffee Heaven has a fantastic selection of pastries that pair perfectly with their coffee. The atmosphere is great for both work and relaxation."</i>
+                </li>
+
+
+                <li>
+                    <img src="./img/Customer 6.jpg" alt="">
+                    <h3>Sarah Lee</h3>
+                    <i> "I appreciate Coffee Heaven's commitment to sustainability. They use eco-friendly cups and source their beans from ethical farms. It's great to support a business that cares about the environment."</i>
+                </li>
+            </ul>
+        </div>
      </section>
 
 
