--- a/src/index.html
+++ b/src/index.html
@@ -168,43 +168,46 @@
      <!-- Customer Review Section -->
 
 
-     <section>
-        <div>
+     <section class="px-5 py-5">
+        <div >
+            <h1 class="block w-fit mx-auto py-4 text-6xl font-medium 
+            border-b-4 border-orange-400 px-6 text-center">
+                Customer Reviews </h1>
             <ul>
-                <li>
-                    <img class="h-40 w-40"  src="./img/Customer 1.jpg" alt="">
-                    <h3>John Doe</h3>
+                <li class="flex flex-col items-center text-center p-10">
+                    <img class="h-48 w-40 object-cover rounded-full mb-10"  src="./img/Customer 1.jpg" alt="">
+                    <h3 class="font-semibold text-2xl mb-4">John Doe</h3>
                     <i>"The best coffee shop in town! The ambiance is cozy, and the staff are incredibly friendly. Their cappuccino is a must-try!"</i>
                 </li>
 
-                 <li>
-                    <img src="./img/Customer 4.jpg" alt="">
-                    <h3>Emily Johnson</h3>
+                 <li class="flex flex-col items-center text-center p-10">
+                    <img src="./img/Customer 4.jpg" class="h-48 w-40 object-cover rounded-full mb-10" alt="">
+                    <h3 class="font-semibold text-2xl mb-4">Emily Johnson</h3>
                     <i>"Coffee Heaven has become my go-to spot for both work and relaxation. The Wi-Fi is reliable, and the atmosphere is just right."</i>
                 </li>
 
-                <li>
-                    <img src="./img/Customer 2.jpg" alt="">
-                    <h3>Jane Smith</h3>
+                <li class="flex flex-col items-center text-center p-10">
+                    <img src="./img/Customer 2.jpg" class="h-48 w-40 object-cover rounded-full mb-10" alt="">
+                    <h3 class="font-semibold text-2xl mb-4">Jane Smith</h3>
                     <i>"I love their iced coffee! It's the perfect pick-me-up on a hot day. The quality of the beans really shines through in every cup."</i>
                 </li>
 
-                <li>
-                    <img src="./img/Customer 5.jpg" alt="">
-                    <h3>Sophia Wilson</h3>
+                <li class="flex flex-col items-center text-center p-10">
+                    <img src="./img/Customer 5.jpg" class="h-48 w-40 object-cover rounded-full mb-10" alt="">
+                    <h3 class="font-semibold text-2xl mb-4">Sophia Wilson</h3>
                     <i>"The baristas at Coffee Heaven are true artists. They take the time to craft each drink to perfection. Highly recommend the latte art!"</i>
                 </li>
 
-                <li>
-                    <img src="./img/Customer 3.jpg" alt="">
-                    <h3>Michael Brown</h3>
+                <li class="flex flex-col items-center text-center p-10">
+                    <img src="./img/Customer 3.jpg" class="h-48 w-40 object-cover rounded-full mb-10"  alt="">
+                    <h3 class="font-semibold text-2xl mb-4">Michael Brown</h3>
                     <i>"Coffee Heaven has a fantastic selection of pastries that pair perfectly with their coffee. The atmosphere is great for both work and relaxation."</i>
                 </li>
 
 
-                <li>
-                    <img src="./img/Customer 6.jpg" alt="">
-                    <h3>Sarah Lee</h3>
+                <li class="flex flex-col items-center text-center p-10">
+                    <img src="./img/Customer 6.jpg" class="h-48 w-40 object-cover rounded-full mb-10" alt="">
+                    <h3 class="font-semibold text-2xl mb-4">Sarah Lee</h3>
                     <i> "I appreciate Coffee Heaven's commitment to sustainability. They use eco-friendly cups and source their beans from ethical farms. It's great to support a business that cares about the environment."</i>
                 </li>
             </ul>
