--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,22 @@
      </section>
 
 
+     <section id="gallary">
+        <h1 class="block w-fit mx-auto py-4 text-6xl font-medium 
+            border-b-4 border-orange-400 px-6 text-center">
+                Gallary</h1>
+        <div>
+            <ul>
+                <li class="h-100 w-100 object-cover rounded-4xl mb-10">
+                    <img src="./img/Galary-1.jpg" alt="">
+                </li>
+            </ul>
+        </div>
+
+
+     </section>
+
+
     
 
 
